--- a/css/game.css
+++ b/css/game.css
@@ -13,6 +13,11 @@
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
+    transition: transform 0.2s ease-in-out;
+}
+
+.restart-button:active {
+    transform: scale(0.9); /* shrink on click */
 }
 
 .restart-button:hover {
@@ -42,6 +47,17 @@
     text-align: center;
 }
 
+.board h3::before {
+    content: "⚓ "; /* add symbol before title3 */
+    color: navy;
+    font-weight: bold;
+}
+
+.board h3::after {
+    content: " 🚢"; /* add symbol before title3 */
+    color: red;
+    font-weight: bold;
+}
 /* board cell */
 .cell {
     width: 40px;
